--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/boracay.jpg" style="width:100%;min-height:200px">
+  <img src="img/coron.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Boracay Beach</h2>
+  <h2>Coron Island</h2>
   <p>
-    Boracay Island in the Philippines has been called the Ibiza of Asia, a honeymooner’s dream and a backpacker’s secret, but as the number of visitors increased, so too did the environmental issues. In an attempt to save the island’s ecosystem from ruin, in 2018 the island was closed for six months. Culture Trip speaks to locals about the effect the shutdown had.
+    Being the third largest island, Coron is one of the best places to visit in the Philippines. Towards the centre of the island, you will find limestone peaks of several heights, with caves underneath which one can explore further to have a day full of adventures.
   </p>
 </div>
 
@@ -27,12 +27,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/elnido.jpg" style="width:100%;min-height:200px">
+  <img src="img/tagaytay.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>El Nido Palawan</h2>
+  <h2>Tagaytay</h2>
   <p>
-    You’ve probably seen photographs of the stunning limestone formations around El Nido rising majestically above the turquoise water. It is one of the most popular destinations in the Philippines and for good reason, the nearby islands and beaches are absolutely stunning. But the actual town of El Nido leaves something to be desired. The infrastructure has not yet caught up with the massive influx of tourists. Which means a lot of construction, contaminated water, questionable toilets, and high prices.
+    Out of all the tourist places in the Philippines, Tagaytay is quite popular in scenic beauty and the comfort its weather provides. Being perched at a higher altitude, you can view the famous Taal Lake and the Taal volcano. The Picnic Grove is another place where you can visit for a relaxing meal while marvelling at the far-off cliffs and a clear view of the ocean and some of the islands.
   </p>
 </div>
 
@@ -40,12 +40,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/chocolatehills.jpg" style="width:100%;min-height:200px">
+  <img src="img/intramuros.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Chocolate Hills</h2>
+  <h2>Intramuros</h2>
   <p>
-    According to legends, the Chocolate Hills existed because of a weeping giant who had been disappointed in love, and the hills grew where his tears fell. In another legend, two giants went to war and lobbed boulders at each other for days. The giants eventually resolved their differences, but the mounds remained where the rocks landed.
+    Constructed by the colonial Spanish or more specifically by Miguel Lopez de Legaspi back in 1571, Intramuros is nicknamed as the “Walled City”. This entire place is encompassed by towering sturdy walls, with some being as tall as 6 meters.
   </p>
 </div>
 
@@ -53,39 +53,36 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/puerto-princesa-underground-river.jpg" style="width:100%;min-height:200px">
+  <img src="img/lakekayangan.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Undergroud River</h2>
+  <h2>Lake Kayangan</h2>
   <p>
-    It’s not surprising at all when Palawan has been recognized as the best island in the world by international travel magazines. With its pristine beaches and breathtaking lagoons, you will never be disappointed at what’s waiting for you. One charming treasure of Palawan that truly stands out is the Puerto Princesa Subterranean River National Park.
-    </p>
+    Lying  in the northern part of the picturesque Palawan Island, Lake Kayangan is considered to be the cleanest lake in Asia. Flaunting cool and clear waters, this lake is incredibly beautiful. Tourists visiting Lake Kayangan can engage in a number of leisure activities, such as swimming, boating, rafting, caving, hiking and diving.    </p>
 </div>
 
 </div>
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/banauerice.jpg" style="width:100%;min-height:200px">
+  <img src="img/siargao.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Banaue Rice Terraces</h2>
+  <h2>Siargao</h2>
   <p>
-    Ang Hagdan-hagdang Palayan ng Banawe (Ingles: Banaue Rice Terraces) ay mga 2000-taong gulang na mga hagdanang-taniman na nililok sa mga bulubundukin ng Ifugao sa Pilipinas ng mga ninuno ng mga katutubong mamamayanang Batad. Karaniwang tinatawag ito ng mga Pilipino bilang "Ikawalong Kahangahangang Pook sa Mundo". Tinatawag itong payew sa katutubong pananalita sa Ifugao.
-  </p>
+    Siargao is known to be one of the famous places in the Philippines for surfing. Even though the island is very small, almost like a teardrop, it’s one of the most visited places. The entire island is bordered with white sandy beaches while the turquoise blue water washes off the shoreline. Inland waterfalls and lagoons are also present, which are major relaxing and rejuvenating spots.  </p>
 </div>
 
 </div>
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/taal.jpg" style="width:100%;min-height:200px">
+  <img src="img/secretlagoon.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Taal Volcano</h2>
+  <h2>Secret Lagoon</h2>
   <p>
-    Mayon Volcano-north of Legazpi city, Albay, Bicol Mayon Volcano, also known as Mount Mayon , is an active mountain in the province of Albay , on the island of Luzon in the Philippines.
-  </p>
+    The Secret Lagoon is a stunning hideaway lagoon that can only be accessed through a tiny intriguing cave. As you enter the cave on your boat, you will be astounded by the breathtaking towering limestone outcrops. The sharp outcrops are shrouded with lush trees that offer a contrasting appeal to the grey colour of the limestones.  </p>
 </div>
 
 </div>
